# 100k-data-streaming

./: README.md  docker-compose.yml
flink-processor/: Dockerfile  pom.xml
flink-processor/src/main/java/: Main.java  Order.java  OrderDeserializationSchema.java
generate-data/: Cargo.toml  Dockerfile
generate-data/src/: main.rs
kafka-producer/: Cargo.toml  Dockerfile
kafka-producer/src/: main.rs
postgres/: create_table.sql
